# nova-lang

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  default.nix  perf.data  refcounting.nv  result  runtest.sh  shell.nix  speedtest.nv
.github/workflows/: ci.yml  release.yml  rust.yml
Aoc2024/: aoc1.txt  aoc2.txt  aoc3.txt  aoc4.txt  nvaoc1.nv  nvaoc2.nv  nvaoc3.nv  nvaoc4.nv
assembler/: Cargo.toml
assembler/src/: lib.rs
common/: Cargo.toml
common/src/: TaggedItems.rs  code.rs  debug_info.rs  environment.rs  error.rs  fileposition.rs  gen.rs  lib.rs  nodes.rs  table.rs  tokens.rs  ttype.rs  utilities.rs
compiler/: Cargo.toml
compiler/src/: lib.rs
debugger/: Cargo.toml
debugger/src/: lib.rs
demo/: blockcomments.nv  bounce.nv  breakout.nv  calculator.nv  closures.nv  compiler.nv  demo.nv  dunder.nv  ecs.nv  enums.nv  fib.nv  fireworks.nv  flappy.nv  forth.nv  function.nv  functional.nv  galaxy.nv  gameoflife.nv  generics.nv  iterators.nv  let.nv  lexer.nv  loops.nv  math.nv  matmul.nv  option_type.nv  parser.nv  parsercomb.nv  particles.nv  patterns.nv  pipeline.nv  plotdemo.nv  rain.nv  raylib.nv  smartbuild.nv  snake.nv  speedtest.nv  structs.nv  vtable.nv
disassembler/: Cargo.toml
disassembler/src/: lib.rs
documentation/: builtin.md  conventions.md  debugging.md  game_engine_guide.md  game_guide.md  getting_started.md  how_to_write_nova.md  installation.md  nova_game_dev_guide.md  raylib.md  reference.md  std.md  terminal_guide.md  tutorial.md  types.md
fuzz/: Cargo.toml  run_fuzz.sh
fuzz/corpus/fuzz_full_pipeline/: seed_structs.nv
fuzz/corpus/fuzz_lexer/: seed_generics.nv
fuzz/corpus/fuzz_parser/: seed_closures.nv  seed_enums.nv  seed_functions.nv
fuzz/fuzz_targets/: fuzz_full_pipeline.rs  fuzz_lexer.rs  fuzz_parser.rs
games/Breakout/: breakout.nv
games/Dungeon/: dungeon.nv
games/Pong/: pong.nv
games/Shooter/: shooter.nv
games/Survive/: Survive.nv  survive.nv
lexer/: Cargo.toml
lexer/src/: lib.rs  tests.rs
native/: Cargo.toml
native/src/: assert.rs  char.rs  data.rs  float.rs  io.rs  lib.rs  list.rs  rand.rs  random.rs  raylib.rs  regex.rs  str.rs  terminal.rs  time.rs
nova-lang/: Cargo.toml
nova-lang/src/: main.rs
novacli/: Cargo.toml
novacli/src/: main.rs
novacore/: Cargo.toml
novacore/src/: lib.rs
optimizer/: Cargo.toml
optimizer/src/: lib.rs
parser/: Cargo.toml
parser/src/: lib.rs
std/: Io.nv  Iter.nv  ansi.nv  camera.nv  color.nv  container.nv  core.nv  datetime.nv  deque.nv  entity.nv  functional.nv  gameloop.nv  grid.nv  hashmap.nv  input.nv  io.nv  iter.nv  list.nv  log.nv  math.nv  maybe.nv  noise.nv  option.nv  particle.nv  physics.nv  plot.nv  result.nv  scene.nv  set.nv  signal.nv  string.nv  timer.nv  tui.nv  tuple.nv  tween.nv  vec2.nv  widget.nv
tests/: _guide_audit.nv  _tmp_pad.nv  run_tests.sh  test_advanced_structs_and_enums.nv  test_audio_signatures.nv  test_blocks.nv  test_bug_probe.nv  test_builtins_advanced.nv  test_chars.nv  test_cli_args.nv  test_clone.nv  test_closure_advanced.nv  test_closures.nv  test_combo_guards_destructure.nv  test_comparison_logic.nv  test_compound_assign.nv  test_container.nv  test_control_flow.nv  test_currying.nv  test_data_exhaustive.nv  test_data_save_load.nv  test_datetime.nv  test_design_patterns.nv  test_design_patterns2.nv  test_destructure_edge.nv  test_destructuring.nv  test_destructuring_advanced.nv  test_doc_audit.nv  test_doc_snippets.nv  test_doc_snippets_v06.nv  test_doublecolon.nv  test_dunder_operators.nv  test_dyn_type.nv  test_edge_cases.nv  test_edge_cases_advanced.nv  test_enum_advanced.nv  test_enums.nv  test_exhaustiveness_edge.nv  test_exhaustiveness_struct.nv  test_feature_combos.nv  (+144 more)
tests/error_msg_tests/: test_assign_to_literal.nv  test_assign_type_mismatch.nv  test_dot_on_int.nv  test_enum_already_defined.nv  test_field_not_found.nv  test_for_not_list.nv  test_func_already_defined.nv  test_if_let_not_option.nv  test_if_not_bool.nv  test_inline_if_non_bool.nv  test_inline_if_type_mismatch.nv  test_let_already_defined.nv  test_let_type_mismatch.nv  test_list_index_non_int.nv  test_match_exhaustive.nv  test_match_missing_variant.nv  test_match_no_binding.nv  test_match_wrong_type.nv  test_missing_return.nv  test_no_func_sig.nv  test_no_module.nv  test_not_operator_non_bool.nv  test_tilde_void.nv  test_tuple_dot_access.nv  test_tuple_index_oob.nv  test_undefined_symbol.nv  test_unknown_type.nv  test_void_comparison.nv  test_while_let_not_option.nv  test_while_not_bool.nv  test_wrong_return_type.nv
tests/gc_bench/: .gitignore  bench_01_mass_alloc.nv  (+17 more)
typechecker/: Cargo.toml
vm/: Cargo.toml
vm/src/: lib.rs  memory_manager.rs  state.rs
(+396 files in other folders)
