[workspace]
resolver = "2"
members = [
    "novacli",
    "novacore",
    "native",
    "lexer",
    "vm",
    "assembler",
    "disassembler",
    "compiler",
    "common",
    "optimizer",
    "parser",
    "typechecker",
    "debugger"
]

[workspace.package]
version = "0.6.0"
license = "MIT"

[profile.release]
opt-level = 3
