[package]
name = "nova-fuzz"
version = "0.0.1"
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
lexer = { path = "../lexer" }
parser = { path = "../parser" }
common = { path = "../common" }

# Prevent this from interfering with the workspace
[workspace]

[[bin]]
name = "fuzz_lexer"
path = "fuzz_targets/fuzz_lexer.rs"
test = false
doc = false

[[bin]]
name = "fuzz_parser"
path = "fuzz_targets/fuzz_parser.rs"
test = false
doc = false

[[bin]]
name = "fuzz_full_pipeline"
path = "fuzz_targets/fuzz_full_pipeline.rs"
test = false
doc = false
