[package]
name = "lexer"
version = "0.5.0-alpha"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
phf = { version = "0.11.2", features = ["macros"] }

[dev-dependencies]
pretty_assertions = "1.4.1"
