[package]
name = "native"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
common = { path = "../common" }
vm = { path = "../vm"}
rand = "0.8.5"
regex = "1.11.1"
# add features to raylib custom frame control
raylib = { version = "5.0.0", features = ["custom_frame_control"] }