[package]
name = "native"
version = "0.6.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
common = { path = "../common" }
vm = { path = "../vm"}
rand = "0.8.5"
regex = "1.11.1"
raylib = "5.0.2"
serde_json = "1"