[package]
name = "vm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common ={ path = "../common"}
modulo = "0.1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossterm = "0.27.0"
